updated bottom nav for artist index page to have bottom margin. Horizontal scroll for artist styles. Fixed style list in emails

--- a/app/assets/stylesheets/artists/_index.scss
+++ b/app/assets/stylesheets/artists/_index.scss
@@ -43,3 +43,14 @@
     margin-bottom: 20px;
     margin-right: 5px;
 }
+
+.scroll-tags {
+    overflow: auto;
+    white-space: nowrap;
+    margin-right: 20px;
+}
+
+.scroll-tags span {
+    display: inline-block;
+    text-decoration: none;
+}
